--- a/style.css
+++ b/style.css
@@ -37,10 +37,7 @@
     border-top: 1px solid #eee;
     padding-top: 20px;
   }
-  .nav-link {
+  button, .nav-link {
     color: #d81b60;
     text-decoration: none;
-  }
-  .nav-link:hover {
-    text-decoration: underline;
   }
